@@ -1,9 +1,7 @@
 #!/bin/bash -x
-export DIR=`pwd`
-# export CLASSPATH="${DIR}/target/lircom-2.jar;${DIR}/m2/httpunit-1.7.3.jar;${DIR}/m2/nekohtml-1.9.22.jar;${DIR}/m2/rhino-1.7R4.jar;${DIR}/m2/json-20190722.jar"
-export CLASSPATH="lircom.jar;${DIR}/target/Impact.jar;${DIR}/target/lircom-2.jar"
 
-export DIR=`pwd`
-export CLASSPATH="${DIR}/target/lircom-2.jar:${DIR}/target/Impact.jar"
-java -Xmx256m --add-exports java.base/java.lang=ALL-UNNAMED --add-exports java.desktop/sun.awt=ALL-UNNAMED --add-exports java.desktop/sun.java2d=ALL-UNNAMED -Djava.library.path=${LIB} -Xmx256m -cp ${CLASSPATH} lircom.Peer 8180 &
+. env.sh
+
+${JAVA_OPTS} lircom.Peer 8180 8181 &
 echo $!
+sleep 1
